# vdfpy

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  clustering.html  conduct.html  contributing.html  dimension-reduction.html  distributions.html  fleks.html  generator.html  genindex.html  index.html  mms-fpi.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  try.py  vdf.html  vlasiator.html
.github/workflows/: CI.yml
_modules/: index.html  vdfpy.html
_modules/vdfpy/: clustering.html
_modules/vdfpy/fleks/: fleks.html
_modules/vdfpy/generator/: generator.html
_modules/vdfpy/vlasiator/: vlasiator.html
_sources/: dimension-reduction.ipynb.txt  distributions.ipynb.txt  fleks.ipynb.txt  generator.ipynb.txt  index.md.txt  vdf.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/vdfpy/: index.rst.txt
_sources/autoapi/vdfpy/clustering/: index.rst.txt
autoapi/: index.html
autoapi/vdfpy/: index.html
autoapi/vdfpy/clustering/: index.html
autoapi/vdfpy/fleks/: index.html
autoapi/vdfpy/generator/: index.html
autoapi/vdfpy/spedas/: index.html
autoapi/vdfpy/vdfpy/: index.html
autoapi/vdfpy/vlasiator/: index.html
docs/: Makefile  clustering.ipynb  conf.py  distributions.ipynb  generator.ipynb  index.md  make.bat  mms-fpi.ipynb  requirements.txt  vdf.md  vlasiator.ipynb  workflow.md
src/vdfpy/: __init__.py  clustering.py  vdfpy.py
src/vdfpy/fleks/: __init__.py  fleks.py
src/vdfpy/generator/: generator.py
src/vdfpy/vlasiator/: vlasiator.py
tests/: test_vdf.py
(+13 files in other folders)
