[tool.poetry]
name = "vdfpy"
version = "0.1.0"
description = "Velocity distribution function classifier"
authors = ["Hongyang Zhou <hyzhou@umich.edu>"]
readme = "README.md"
packages = [{include = "vdfpy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flekspy = "^0.2.0"
pyvlasiator = "^0.1.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
